# glimpse-architecture

./: CHANGELOG.md  README.md  mise.toml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
docs/claude-skill/: SKILL.md  index.md
docs/guides/: django.md  import-linter.md
docs/layers/: edges.md  gates.md  index.md  inits.md  links.md  mills.md  pacts.md  specs.md
docs/patterns/: index.md
docs/slicing/: file-layout.md  index.md
